tests/paczka1/small_fuzzy/52920957.err
Error in line 3: USLZQRij A613 37,0
Error in line 2: 1QZdl6yz A613 91,7
Error in line 12: USLZQRij A613 92,8
